agrego nuevo htmly body

--- a/index.html
+++ b/index.html
@@ -53,7 +53,15 @@
             <img class=""src="/imagen/undraw_static_website_re_x70h.svg" alt="">
         </div></section>
 
-<section></section>
+<section class="container-section2">
+    <p>Hago la breve descripcion de la empresa para que
+        usted al ingresar en algun
+        boton de abajo va a poder apreciar la informacion ampliada,
+         de la supuesta empresa o lo que sea que pueda ser</p>
+
+
+
+</section>
 
 
 
