--- a/index.html
+++ b/index.html
@@ -54,10 +54,9 @@
         </div></section>
 
 <section class="container-section2">
-    <p>Hago la breve descripcion de la empresa para que
-        usted al ingresar en algun
-        boton de abajo va a poder apreciar la informacion ampliada,
-         de la supuesta empresa o lo que sea que pueda ser</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores facilis iste nisi non reiciendis architecto alias sed quisquam fugit perspiciatis nesciunt, ducimus ut, nulla porro obcaecati ex, cum dolorum ipsa?
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui voluptates cupiditate ea, recusandae pariatur aspernatur! Consequuntur dolore aspernatur debitis quidem magni, exercitationem beatae tempora rem aliquam sint voluptate molestiae natus.
+    </p>
 
 
 
