--- a/index.html
+++ b/index.html
@@ -45,10 +45,12 @@
 
         <button>CALL TO ACTION</button>
 
-        <button>LEARN MORE</button></div>
+        <button>LEARN MORE</button>
+    
+    </div>
         
         <div class="imagen-info">
-        <img class=""src="/imagen/undraw_static_website_re_x70h.svg" alt="">
+        <img class="img-1"src="/imagen/undraw_static_website_re_x70h.svg" alt="">
         </div>
     </section>
 
@@ -62,7 +64,9 @@
 </section>
 
 
-
+<section id="container-section3">
+    <h1></h1>
+</section>
 
 
 
