--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link class="letra" href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <link href="./fontawesome/css/all.css" rel="stylesheet">
-
-
-
+    <link rel="stylesheet" href="/imagen/bxl-instagram.svg">
+    
+   
 
 
 
@@ -152,9 +152,56 @@
         </section>
 
 
+
+<section id="section-proyect">
+
+<h3>MIS PROYECTOS: TRABAJOS Y CHALLENGES</h3>
+
+<div class="contim">
+<div class="imclas"><img src="" alt=""></div>
+<div class="imclas"><img src="" alt=""></div>
+<div class="imclas"><img src="" alt=""></div>
+<div class="imclas"><img src="" alt=""></div>
+<div class="imclas"><img src="" alt=""></div>
+</div>
+
+
+
+
+
+
+
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
     </main>
 
-
+    <div class="footer-basic">
+        <footer>
+            <div class="social"><a href=""> <img src="/imagen/bxl-instagram.svg" alt=""><i class="icon ion-social-instagram"></i></a>
+                <a href=""><img src="/imagen/bxl-snapchat.svg" alt=""><i class="icon ion-social-snapchat"></i></a>
+                <a href="#"><img src="/imagen/bxl-twitter.svg" alt=""><i class="icon ion-social-twitter"></i></a>
+                <a href="#"><img src="/imagen/bxl-facebook.svg" alt=""><i class="icon ion-social-facebook"></i></a></div>
+            <ul class="list-inline">
+                <li class="list-inline-item"><a href="#">Home</a></li>
+                <li class="list-inline-item"><a href="#">Services</a></li>
+                <li class="list-inline-item"><a href="#">About</a></li>
+                <li class="list-inline-item"><a href="#">Terms</a></li>
+                <li class="list-inline-item"><a href="#">Contact</a></li>
+            </ul>
+            <p class="copyright">Tincho © 2022</p>
+        </footer>
+    </div>
 
 
 </body>
