la ultima del footer

--- a/index.html
+++ b/index.html
@@ -158,11 +158,11 @@
 <h3>MIS PROYECTOS: TRABAJOS Y CHALLENGES</h3>
 
 <div class="contim">
-<div class="imclas"><img src="" alt=""></div>
-<div class="imclas"><img src="" alt=""></div>
-<div class="imclas"><img src="" alt=""></div>
-<div class="imclas"><img src="" alt=""></div>
-<div class="imclas"><img src="" alt=""></div>
+<div class="imclas"><img src="/imagen/sinfoto.png" alt=""></div>
+<div class="imclas"><img src="/imagen/sinfoto.png" alt=""></div>
+<div class="imclas"><img src="/imagen/sinfoto.png" alt=""></div>
+<div class="imclas"><img src="/imagen/sinfoto.png" alt=""></div>
+<div class="imclas"><img src="/imagen/sinfoto.png" alt=""></div>
 </div>
 
 
