termine todo a entregar con footer

--- a/index.html
+++ b/index.html
@@ -194,10 +194,10 @@
                 <a href="#"><img src="/imagen/bxl-facebook.svg" alt=""><i class="icon ion-social-facebook"></i></a></div>
             <ul class="list-inline">
                 <li class="list-inline-item"><a href="#">Home</a></li>
-                <li class="list-inline-item"><a href="#">Services</a></li>
-                <li class="list-inline-item"><a href="#">About</a></li>
-                <li class="list-inline-item"><a href="#">Terms</a></li>
-                <li class="list-inline-item"><a href="#">Contact</a></li>
+                <li class="list-inline-item"><a href="#container-section3">Services</a></li>
+                <li class="list-inline-item"><a href="">About</a></li>
+                <li class="list-inline-item"><a href="">Terms</a></li>
+                <li class="list-inline-item"><a href="">Contact</a></li>
             </ul>
             <p class="copyright">Tincho © 2022</p>
         </footer>
